--- a/state-prac/src/index.css
+++ b/state-prac/src/index.css
@@ -1,5 +1,3 @@
-
-
 * {
   box-sizing: border-box;
 }
@@ -77,7 +75,7 @@ h3 {
 }
 
 .close {
-  position: absolute;
+  /* position: absolute; */
   top: 16px;
   right: 16px;
   border: none;
