--- a/coding-challenges/date-counter/src/App.css
+++ b/coding-challenges/date-counter/src/App.css
@@ -1,1 +1,9 @@
-
+.app {
+  text-align: center;
+}
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
