--- a/coding-challenges/todo-list/src/index.css
+++ b/coding-challenges/todo-list/src/index.css
@@ -3,8 +3,10 @@
 }
 .App {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin-top: 40px;
+  gap: 5px;
 }
 .inputForm input {
   width: 40rem;
@@ -13,7 +15,7 @@
   outline: none;
   border: 1px solid rgb(228, 194, 194);
 }
-.inputForm button {
+button {
   margin-left: 4px;
   width: 5rem;
   height: 2em;
@@ -21,4 +23,11 @@
   border: none;
   border-radius: 4px;
   color: white;
+  align-self: center;
+}
+.task {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 40rem;
 }
